# repackaging-protection

./: .gitignore  README.md  android-debug  build.xml  java2jimple  jimple2class  shell.nix  sign-and-deploy  test  transform
Test/src/: ClassInitializer.java  Factorial.java  Fields.java  FieldsTest.java  MatchDifferentTypes.java  ModifyAccessModifiers.java  NestedSDC.java  RegressionTestInsertBeforeNoRedirect.java  SimpleReturn.java  SimpleTest.java  SpecialInvokeTest.java  VirtualInvokeSamePackage.java
Test/src/appendix/: Example.java
Test/src/beef/: GetBeef.java
Test/src/privateconstructor/: CreateNewInstance.java
native/: .gitignore  CMakeLists.txt  default.nix  native-build
native/src/: check.cpp  check.h
src/ch/ethz/ivogels/: DexBytesPrinter.java  DexUtils.java  Main.java  ManifestEditor.java  NativeUtils.java  Pair.java  SDC.java  SootUtils.java  Stats.java
src/ch/ethz/ivogels/transformers/: SDCBodyTransformer.java
src/embedded/: Logger.java  ResultWrapper.java  SDCLoader.java
stats/apks/: dlfdroid  dltop  randomsample
stats/block-count/: gendata  plot.gnu
stats/const-stats/: genaggregate  gendata  plot-count.gnu  plot-distribution.gnu
stats/crash-test/: gendata  sumstats
stats/performance/: gendata  plot.gnu
stats/performance/MeasureOverhead/app/: build.gradle
stats/performance/MeasureOverhead/app/src/androidTest/java/com/example/ili/measureoverhead/: ExampleInstrumentedTest.java
stats/performance/MeasureOverhead/app/src/main/: AndroidManifest.xml
stats/performance/MeasureOverhead/app/src/main/java/com/example/ili/measureoverhead/: GetBeef.java  MainActivity.java
stats/performance/MeasureOverhead/app/src/main/res/values/: strings.xml
stats/performance/MeasureOverhead/app/src/test/java/com/example/ili/measureoverhead/: ExampleUnitTest.java
stats/performance/MeasureOverhead/gradle/wrapper/: gradle-wrapper.properties
stats/prod-overhead/: gendata
